@@ -1,6 +1,6 @@
 body
 {
-      font-family: Arial, Helvetica, sans-serif;
+      font-family: sans-serif,Arial, Helvetica;
 }
 
 .navbar
@@ -18,6 +18,7 @@ body
       padding: 14px 16px;
       text-decoration: none;
       margin-left: 10%;
+      
 }
 
 .dropdown
@@ -77,7 +78,7 @@ body
 .bgimg1
 {
       width: 100%;
-      height: 300px;
+      height: 400px;
 }
 
 main
@@ -125,7 +126,7 @@ div [class^="col-"]
 
 .card-title i:hover
 {
-      color: #18d4ca;
+      color: #DE683D;
 }
 
 .card:hover
@@ -136,6 +137,10 @@ div [class^="col-"]
 .card-text
 {
       height:80px;
+      font-family: sans-serif;
+      font: Verdana;
+      color: black;
+      text-align: center;
 }
 
 .sidesimg
