@@ -12,7 +12,7 @@
 	<body>
 		<header>
 			<div class="navbar">
-                        <a href="home.html">Home</a>
+                        <a href="index.html">Home</a>
 
                         <a href="aboutus.html">About Us</a>
 
@@ -80,7 +80,7 @@
 		</main>
 
 		<footer>
-			<i>©NO Copyright 4000 by abhishek,diksha,mitesh,prathamesh,shreekant. All rights mostly reversed.</i>
+			<i>Made in conjunction with abhishek,diksha,mitesh,prathamesh,shreekant.</i>
 		</footer>
 	</body>
 </html>
