@@ -11,7 +11,7 @@
       <body>
             <header>
                   <div class="navbar">
-                        <a href="home.html">Home</a>
+                        <a href="index.html">Home</a>
 
                         <a href="aboutus.html">About Us</a>
 
@@ -91,8 +91,5 @@
                   </div>
             </main>
 
-            <footer>
-                  <i>©NO Copyright 4000 by abhishek,diksha,mitesh,prathamesh,shreekant. All rights mostly reversed.</i>
-            </footer>
-      </body>
-</html>
+            <footer> <i>Made in conjunction with
+abhishek,diksha,mitesh,prathamesh and shreekant.</i> </footer> </body> </html>
