@@ -1,1 +1,2 @@
 #write here afterwards
+1.adjusted some font types and other elements like font size in index page.
